<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_overview" />

        <EditText
            android:id="@+id/edit_product_name"
            style="@style/EditorFieldStyle"
            android:hint="PRODUCT_NAME"
            android:inputType="textCapWords" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_measurement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/price1" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <EditText
                android:id="@+id/edit_price"
                style="@style/EditorFieldStyle"
                android:hint="@string/prce"
                android:inputType="number" />

            <TextView
                android:id="@+id/label_dollar_units"
                style="@style/EditorUnitsStyle"
                android:text="@string/dollar" />
        </RelativeLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/edit_quantity_name"
        style="@style/EditorFieldStyle"
        android:hint="@string/quantity"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/edit_supplier_name"
        style="@style/EditorFieldStyle"
        android:hint="@string/supplier_name"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/edit_supplier_contact"
        style="@style/EditorFieldStyle"
        android:hint="@string/supplier_contact"
        android:inputType="textCapWords" />
</LinearLayout>
